--- a/usuarios-web/package.json
+++ b/usuarios-web/package.json
@@ -17,6 +17,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
+    "js-cookie": "^3.0.5",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-icons": "^5.0.1",
